--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "firebase": "^10.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
